--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@
     </div>
 
     <!--Scripts-->
-    <script src="/JS/selection.js"></script>
+    <script src="./JS/selection.js"></script>
 </body>
 </html>
