--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <select id="select1">
                             <option value="Binario">Binario</option>
                             <option value="Esadecimale">Esadecimale</option>
-                            <option value="Base64">Base64</option>
+                            <option value="Ascii">Ascii</option>
                             <option value="Intero">Intero</option>
                         </select>
                     </div>
@@ -50,7 +50,7 @@
                         <select id="select2">
                             <option value="Binario">Binario</option>
                             <option value="Esadecimale">Esadecimale</option>
-                            <option value="Base64">Base64</option>
+                            <option value="Ascii">Ascii</option>
                             <option value="Intero">Intero</option>
                         </select>
                     </div>
