--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                             <option value="Binario">Binario</option>
                             <option value="Esadecimale">Esadecimale</option>
                             <option value="Ascii">Ascii</option>
-                            <option value="Intero">Intero</option>
+                            <option value="Decimale">Decimale</option>
+                            <option value="Ottale">Ottale</option>
                         </select>
                     </div>
                     <div class="input-1">
@@ -51,7 +52,8 @@
                             <option value="Binario">Binario</option>
                             <option value="Esadecimale">Esadecimale</option>
                             <option value="Ascii">Ascii</option>
-                            <option value="Intero">Intero</option>
+                            <option value="Decimale">Decimale</option>
+                            <option value="Ottale">Ottale</option>
                         </select>
                     </div>
                     <div class="input-2">
